--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Haoran Zheng
-#logo: /assets/img/headshot_circle.png
+#logo: /assets/img/IMG_2948.jpeg
 #description: text below image
 show_downloads: false
 theme: jekyll-theme-minimal
