--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Haoran Zheng
-#logo: /assets/img/IMG_2948.jpeg
-#description: text below image
+logo: /assets/img/IMG_2948.jpeg
+description: MS in Applied Data Science
 show_downloads: false
 theme: jekyll-theme-minimal
