--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Haoran Zheng
-logo: ![Logo](/assets/IMG/IMG_2948.jpeg)
+logo: /assets/IMG/IMG_2948.jpeg
 description: M.S. in Applied Data Science at The University of Chicago
 show_downloads: false
 theme: jekyll-theme-minimal
