--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ logo: /assets/IMG/IMG_2948.jpeg
 description: M.S. in Applied Data Science at The University of Chicago
 show_downloads: false
 theme: jekyll-theme-minimal
+profile_link: https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=ALUCkoW2B9_cfbb3bricQPJNTxlYXIpwGfyosG2Q-s1wwWjqIZRvdeLHpzntLlOdaNDhENJ9NWGrVNKOKHR42g&user=t8z21IQAAAAJ
