--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Haoran Zheng
 logo: /assets/IMG/IMG_2948.jpeg
-description: The University of Chicago
+description: AI researcher - The University of Chicago
 show_downloads: false
 theme: jekyll-theme-minimal
