--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Haoran Zheng
 logo: /assets/IMG/IMG_2948.jpeg
-description: AI Researcher - the University of Chicago ☎: (513)909-5366 ✉️: haoran.zheng@chicagobooth.edu
+description: AI Researcher - the University of Chicago Tel: (513)909-5366 ✉️: haoran.zheng@chicagobooth.edu
 show_downloads: false
 theme: jekyll-theme-minimal
