--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,9 @@
 title: Haoran Zheng
 logo: /assets/IMG/IMG_2948.jpeg
 description: |
-  AI Researcher - The University of Chicago
+  AI Researcher - the University of Chicago
   📞:(513)909-5366 <br>
-  ✉️:Haoran.Zheng@chicagobooth.edu
+  ✉️:Haoran.Zheng@chicagobooth.edu <br>
+  [LinkedIn](https://www.linkedin.com/in/haoran-zheng-04a9551ba/)
 show_downloads: false
 theme: jekyll-theme-minimal
