--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,6 @@ logo: /assets/IMG/IMG_2948.jpeg
 description: |
   AI Researcher - the University of Chicago
   📞:(513)909-5366 <br>
-  ✉️:Haoran.Zheng@chicagobooth.edu <br>
-  [LinkedIn](https://www.linkedin.com/in/haoran-zheng-04a9551ba/)
+  ✉️:Haoran.Zheng@chicagobooth.edu 
 show_downloads: false
 theme: jekyll-theme-minimal
