--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Haoran Zheng
 logo: /assets/IMG/IMG_2948.jpeg
 description: |
-  AI Researcher - the University of Chicago
+  AI Researcher - the University of Chicago <br>
   📞:(513)909-5366 <br>
   ✉️:Haoran.Zheng@chicagobooth.edu 
 show_downloads: false
