--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Haoran Zheng
-logo: /assets/IMG/IMG_2948.jpeg
+logo: /assets/IMG/IMG_2639 2.jpeg
 description: |
   AI Researcher - the University of Chicago <br>
   <a href="https://www.linkedin.com/in/haoran-zheng-04a9551ba/">LinkedIn Profile</a> | 📞:(513)909-5366 <br>
