--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Haoran Zheng
 logo: /assets/IMG/IMG_2639 2.jpeg
 description: |
-  AI Researcher｜The University of Chicago <br>
+  AI Researcher -The University of Chicago <br>
   <a href="https://www.linkedin.com/in/haoran-zheng-04a9551ba/">LinkedIn Profile</a> ｜ 📞:(513)909-5366 <br>
   ✉️:Haoran.Zheng@chicagobooth.edu 
 show_downloads: false
