--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ logo: /assets/IMG/IMG_2639 2.jpeg
 description: |
   AI Researcher -The University of Chicago <br>
   ✉️:Haoran.Zheng@chicagobooth.edu 
-  <a href="https://www.linkedin.com/in/haoran-zheng-04a9551ba/">LinkedIn Profile</a> <br>
+  <a href="https://www.linkedin.com/in/haoran-zheng-04a9551ba/">LinkedIn </a> <br>
 show_downloads: false
 theme: jekyll-theme-minimal
