--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ title: Haoran Zheng
 logo: /assets/IMG/IMG_2639 2.jpeg
 description: |
   AI Researcher -The University of Chicago <br>
-  <br>
-  ✉️:Haoran.Zheng@chicagobooth.edu <br>
+  Haoran.Zheng[at]chicagobooth.edu <br>
   <a href="https://www.linkedin.com/in/haoran-zheng-04a9551ba/">LinkedIn </a> <br>
 show_downloads: false
 theme: jekyll-theme-minimal
